# hermeneutics

./: CHANGELOG.md  README.md  hermeneutics.cabal
.github/workflows/: ci.yml
src/Hermeneutics/: Algebraic.hs  Apply.hs  Bound.hs  Bound1.hs  Flavours.hs  Functor1.hs  Functors.hs  GFoldable.hs  GTraversable.hs  Grammar.hs  Monad1.hs  Multisorted.hs  SingleSorted.hs  Tree.hs  Value.hs  WellScoped.hs
src/Hermeneutics/Encoding/: DeBruijn.hs  Hybrid.hs  NbE.hs  Source.hs  Value.hs  WellScoped.hs
src/Hermeneutics/Flavours/: Categorical.hs  FirstOrder.hs  ManySorted.hs  NthOrder.hs  SecondOrder.hs
src/Hermeneutics/Grammar/: Algebraic.hs  Categorical.hs  Functorial.hs  NthOrder.hs  SecondOrder.hs
src/Hermeneutics/ManySorted/: Algebraic.hs  Tree.hs  WellScoped.hs
src/Hermeneutics/Multisorted/: Grammar.hs
src/Hermeneutics/WellScoped/: Simple.hs
