cabal-version:      3.0
name:               hermeneutics
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             TurtlePU
maintainer:         sokolov.p64@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
-- extra-source-files:

common stanzas
    ghc-options:      -Wall
    default-language: GHC2024

library
    import:          stanzas
    exposed-modules:
        Hermeneutics.Apply
        Hermeneutics.Grammar
        Hermeneutics.GFoldable
        Hermeneutics.GTraversable
        Hermeneutics.Multisorted.Grammar
        Hermeneutics.Tree
    -- other-modules:
    -- other-extensions:
    build-depends:   base ^>=4.21.0.0
    hs-source-dirs:  src

test-suite hermeneutics-test
    import:         stanzas
    -- other-modules:
    -- other-extensions:
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Test.hs
    build-depends:  base, hermeneutics
